Fix phone input visibility on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 .country-phone-input-container {
   position: relative;
   width: 100%;
+  margin-bottom: 0.5rem;
 }
 
 .country-phone-input-wrapper {
